[package]
name = "extra_ordinaire"
version = "0.1.0"
edition = "2021"
keywords = ["bitcoin", "psbt", "inscriptions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = {git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc"}
bitcoin = { version = "0.29.2", features = ["base64"] }
reqwest = { version = "0.11.6", features = ["blocking"] }
regex = "1.5.4"


